# PerturbLab

./: .cursorignore  .gitignore  CMakeLists.txt  Makefile  README.md  TESTING.md  add_scfoundation_headers.sh  add_source_headers.sh  convert_uce_weights.py  download_and_convert_uce.py  download_log.txt  pyproject.toml  run_notebooks.py  run_notebooks.sh  setup.py  test.py  test_cellfm_final.py  test_gene_mapping.py  test_import.py  test_scgpt_exact.py  upload_log.txt
examples/: download.ipynb  gears.ipynb  go.ipynb  make.ipynb  model.ipynb  types.ipynb
perturblab/: __init__.py  data.py  utils.py
perturblab/analysis/: __init__.py  _de.py  _hvg.py
perturblab/core/: __init__.py  config.py  dataset.py  exceptions.py  jit.py  model_io.py  model_registry.py  resource.py  resource_registry.py
perturblab/data/: __init__.py
perturblab/data/dataset/: __init__.py  _cell.py  _gene_map.py  _go.py  _perturbation.py
perturblab/data/dataset/benchmarks/: README.md  __init__.py  _go.py  _perturbase.py  _perturbase_config.py  _registry.py  _scperturb.py
perturblab/data/dataset/cards/: __init__.py  _base.py  _perturbase.py  _scperturb.py
perturblab/data/datasets/: __init__.py  _cell.py  _go.py  _perturbation.py
perturblab/data/datatype/: __init__.py  _gene_map.py  _gene_vocab.py
perturblab/data/datatype/math/: __init__.py  _bipartite_graph.py
perturblab/data/downloader/: __init__.py  _base.py  _cache.py  _custom.py
perturblab/data/downloader/reference/: __init__.py  _ensembl.py  _hgnc.py
perturblab/data/process/: README.md  __init__.py  _de.py
perturblab/data/resources/: __init__.py  _go.py  _resources.py  _scperturb.py  _type.py
perturblab/engine/: __init__.py  distributed.py  trainner.py
perturblab/io/: __init__.py
perturblab/io/cache/: __init__.py  _manager.py
perturblab/io/download/: __init__.py  _base.py  _ensembl.py  _figshare.py  _go.py  _hgnc.py  _http.py
perturblab/kernels/: __init__.py
perturblab/kernels/mapping/: __init__.py  _bipartite.py  _fast_bipartite.pyi  _fast_bipartite.pyx  _fast_lookup.pyi
perturblab/kernels/mapping/backends/: __init__.py
perturblab/kernels/mapping/backends/cython/: __init__.py  _bipartite_query.pyi  _lookup.pyi  _lookup.pyx
perturblab/kernels/mapping/backends/python/: __init__.py  _bipartite.py  _lookup.py
perturblab/kernels/mapping/ops/: _bipartite.py  _lookup.py
perturblab/kernels/statistics/: README.md  __init__.py  _mannwhitneyu.py  _mannwhitneyu_capi.py  _mannwhitneyu_kernel.pyx  _ttest.py  _ttest_capi.py
perturblab/kernels/statistics/backends/cpp/: __init__.py  _hvg.py  _mannwhitneyu.py  _normalization.py  _scale.py  _ttest.py
perturblab/kernels/statistics/backends/cython/: __init__.py  _hvg.pyx  _hvg_wrapper.py  _scale.pyx  _scale_wrapper.py  mannwhitneyu.pyi  mannwhitneyu.pyx
perturblab/kernels/statistics/backends/python/: __init__.py  _hvg.py  _mannwhitneyu.py  _ttest.py
perturblab/kernels/statistics/ops/: _hvg.py  _mannwhitneyu.py  _normalization.py  _scale.py  _ttest.py
perturblab/kernels/statistics/src/: capi_wrapper.cpp  mannwhitneyu.cpp  ttest.cpp
perturblab/kernels/statistics/src/include/: macro.hpp  (+8 more)
perturblab/methods/: __init__.py
perturblab/methods/gears/: __init__.py  evaluation.py  graph.py  loss.py  pipeline.py  processing.py  utils.py
perturblab/metrics/: README.md  __init__.py  _classification.py  _deg_overlap.py  _direction.py  _distribution.py  _evaluate.py  _expression.py  _spatial.py
perturblab/model/: __init__.py  base.py  configuration.py
perturblab/model/cellfm/: __init__.py  config.py  gene_mapping.py  model.py
perturblab/model/gears/: __init__.py  config.py  model.py
perturblab/model/gears/source/: __init__.py  data_utils.py  gears.py  inference.py  model.py  pertdata.py  utils.py
perturblab/model/scelmo/: __init__.py  config.py  model.py
perturblab/model/scfoundation/: __init__.py  config.py  model.py  perturbation_model.py
perturblab/model/scfoundation/source/: OS_scRNA_gene_index.19264.tsv  README.md  finetune_model.py  gene_index.json  get_embedding.py  load.py  training_hyperparameter.txt
perturblab/model/scgpt/: README.md  __init__.py  config.py  model.py
perturblab/model/scgpt/source/: __init__.py  data_collator.py  data_sampler.py  loss.py  preprocess.py  torch_vocab.py  trainer.py
perturblab/model/uce/: __init__.py  config.py  memory_dataset.py  model.py
perturblab/models/: __init__.py
perturblab/models/cellfm/: __init__.py  config.py  io.py
perturblab/models/cellfm/_modeling/: __init__.py  model.py
perturblab/models/gears/: __init__.py  config.py  io.py
perturblab/models/gears/_modeling/: __init__.py  model.py
perturblab/models/genecompass/: __init__.py  config.py  io.py
perturblab/models/genecompass/_modeling/: __init__.py  model.py
perturblab/models/scelmo/: __init__.py  config.py  io.py
perturblab/models/scelmo/_modeling/: __init__.py  model.py
perturblab/models/scfoundation/: __init__.py  config.py  io.py
perturblab/models/scfoundation/_modeling/: __init__.py  model.py
perturblab/models/scgpt/: __init__.py  config.py  io.py
perturblab/models/scgpt/_modeling/: __init__.py  model.py  utils.py
perturblab/models/uce/: __init__.py  config.py  io.py
perturblab/models/uce/_modeling/: __init__.py  model.py
perturblab/preprocessing/: __init__.py  _normalization.py  _scale.py
perturblab/tools/: __init__.py  _bipartite.py  _df_graph_converting.py  _gears.py  _gene_similarity.py  _similarity.py  _split_cell.py  _split_perturbation.py
perturblab/tools/data_split/: __init__.py  _cell.py  _perturbation.py
perturblab/types/: __init__.py  _cell.py  _gene_graph.py  _gene_map.py  _gene_vocab.py  _perturbation.py  _vocab.py
perturblab/types/math/: __init__.py  _bipartite_graph.py  _dag.py  _graph.py  _hyper_graph.py
perturblab/utils/: __init__.py  _check_dependencies.py  _obo.py  _read_obo.py  _read_write.py  logging.py
scripts/: build_cpp_kernels.sh  compile_extensions.sh  setup_cpp_deps.sh
tests/: README.md  __init__.py  test_download.py  test_imports.py  test_metrics.py  test_preprocessing.py  test_types.py
(+123 files in other folders)
