[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perturblab"
version = "1.0.0"
description = "High-performance single-cell perturbation analysis with unified model registry"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Wang Zhongqi", email = "2868116803@qq.com"}
]
maintainers = [
    {name = "Wang Zhongqi", email = "2868116803@qq.com"}
]
keywords = [
    "single-cell",
    "perturbation",
    "foundation-model",
    "perturbation-prediction",
    "genomics",
    "machine-learning",
    "bioinformatics",
    "computational-biology"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anndata>=0.12.7",
    "numpy>=2.3.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
]

[project.optional-dependencies]
accelerate = [
    "Cython>=3.0.0",
    "numba>=0.59.0",
]
gears = [
    "torch-geometric>=2.7.0",
]
uce = [
    "accelerate>=0.24.0",
]
scgpt = [
    "scgpt>=0.2.4",
]
scfoundation = [
    "local-attention",  # Optional: for Performer backend
]
genecompass = [
    "transformers>=4.30.0",  # Required: HuggingFace transformers for BERT
]
example = [
    "ipykernel"
]
all = [
    "perturblab[accelerate,gears,uce,scgpt,scfoundation,genecompass]",
]

[project.urls]
Repository = "https://github.com/krkawzq/PerturbLab"
"Bug Tracker" = "https://github.com/krkawzq/PerturbLab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["perturblab*"]
exclude = ["tests*", "docs*", "forks*", "scripts*"]

[tool.setuptools.package-data]
perturblab = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F401"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Internal fast_transformers module - imports are for re-export
"**/_fast_transformers/**/*.py" = ["F401"]
# C++ backend - imports are for availability checking
"**/backends/cpp/**/*.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
